fix overflow on home page

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,4 +1,5 @@
 .page-home {
+    overflow: hidden;
 
     main.countdown {
         justify-content: space-between;
